# c-tetris

./: .gitignore  CMakeLists.txt  README.MD
include/: config.h  figures.h  game.h  input.h  music.h  render.h  utility.h
src/: figures.c  game.c  input.c  main.c  music.c  render.c  utility.c
